--- a/app/templates/books.hbs
+++ b/app/templates/books.hbs
@@ -1,13 +1,18 @@
 {{!-- app/templates/books.hbs --}}
 
+
 <ul>
   {{#each model as |book|}}
     <a href="#" {{action 'openCheckoutModal' book}}>
       <li>
         <strong>{{book.title}}</strong><br><br>
         <em>by</em>
-        {{book.author.name}}
+        {{#link-to 'author' book.author.id class="author" bubbles=false }}{{book.author.name}}{{/link-to}}
       </li>
     </a>
   {{/each}}
 </ul>
+
+{{#if showAll}}
+  <button {{action 'showAll'}}>Show All</button>
+{{/if}}
